
History
-------

0.9.9 (11/15/2010)
~~~~~~~~~~~~~~~~~~

* Added a large number of tests; associated refactoring

0.9.8 (11/12/2010)
~~~~~~~~~~~~~~~~~~

* Add "paths" feature to allow multi-import dirs (on the
  file system), and corresponding object paths (in Plone)
  to be specified.

0.9.7 (11/08/2010)
~~~~~~~~~~~~~~~~~~

* Fix import error
* Add file handler to logger; saves output to a file called "parse2plone.log"

0.9.6 (11/08/2010)
~~~~~~~~~~~~~~~~~~

* Fixes to "match" feature
* Combine all modules into one
* Remove a stray pdb (!)
* Add tests (we're at 20% test coverage people!)
* Update docs

0.9.5 (11/08/2010)
~~~~~~~~~~~~~~~~~~

* Add match feature
* Add more project justifications to the docs

0.9.4 (11/06/2010)
~~~~~~~~~~~~~~~~~~

* Remove ``bin/import`` script whenever recipe is uninstalled [aclark4life]
* Add support for XPath syntax in target_tags [derek]
* Add "typeswap" feature [aclark4life]
* Update docs [aclark4life]

0.9.3 (11/04/2010)
~~~~~~~~~~~~~~~~~~

* Add Plone 2.5 compat
* Bug fixes

  * Better handling of file system path; better base dir calculation

0.9.2 (11/03/2010)
~~~~~~~~~~~~~~~~~~

* More doc fixes

0.9.1 (11/03/2010)
~~~~~~~~~~~~~~~~~~

* Doc fixes

0.9.0 (11/03/2010)
~~~~~~~~~~~~~~~~~~

* Fix regressions introduced (or unresolved as of) 0.8.2. Thanks Derek
  Broughton for the bug report(s)

  * Many fixes to convert_parameter_values() method which converts
    recipe parameters to arguments passed to main()
  * Fix "slugify" feature

0.8.2 (11/02/2010)
~~~~~~~~~~~~~~~~~~

* Add rename feature
* Fix regressions introduced in 0.8.1

0.8.1 (10/29/2010)
~~~~~~~~~~~~~~~~~~

* Refactor options/parameters functionality to universally support _SETTINGS dict
* Add "slugify" feature
* Doc fixes
* Add support to optionally publish content after creation
* Add support for generic file import

0.8 (10/27/2010)
~~~~~~~~~~~~~~~~

* Support the importing of content to folders within the Plone site object

0.7 (10/25/2010)
~~~~~~~~~~~~~~~~
