@@ -5,7 +5,9 @@ History
 0.9.9 (11/15/2010)
 ~~~~~~~~~~~~~~~~~~
 
-* Added a large number of tests; associated refactoring
+* Added a large number of tests; performed associated refactoring; now at 50%
+  test coverage
+
 
 0.9.8 (11/12/2010)
 ~~~~~~~~~~~~~~~~~~
